[metadata]
name = krypy
version = 2.2.1
author = André Gaul # EDITED MAY 2023
email = gaul@web-yard.de
description = Krylov subspace methods for linear systems
url = https://github.com/andrenarchy/krypy
project_urls =
    Code=https://github.com/andrenarchy/krypy
    Issues=https://github.com/andrenarchy/krypy/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.11.3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
# importlib_metadata can be removed when we support Python 3.8+ only
install_requires =
    importlib_metadata
    numpy >= 1.24.3
    scipy >= 1.10.1
python_requires = >=3.11.3
setup_requires =
    setuptools>=42
    wheel
